fixed iframe stretching

--- a/app/assets/stylesheets/_pages.scss
+++ b/app/assets/stylesheets/_pages.scss
@@ -352,7 +352,8 @@ img.profile {
 }
 
 iframe {
-  width: 100%;
+  // display: block;
+  // margin: 0 auto;
 }
 
 
@@ -399,6 +400,10 @@ iframe {
   // .featured {
   //   width: 100% !important;
   // }
+  iframe {
+    width: 100%;
+  }
+
 
 
   .thumb {
